fix: remove unnecessary whitespace in hover effect in 13-style.css

--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -49,6 +49,10 @@ a:link {
 
 a:hover {
     text-decoration: underline;
+    
+}
+
+a:active {
     background-color: var(--color-light-grey);
 }
 
